Change finger_4 to finger_ring
