# laravel/app/Http/Resources/Measurement.php
@@ -24,7 +24,7 @@ class Measurement extends JsonResource
             'finger_thumb' => $this->finger_thumb,
             'finger_index' => $this->finger_index,
             'finger_middle' => $this->finger_middle,
-            'finger_4' => $this->finger_4,
+            'finger_ring' => $this->finger_ring,
             'finger_5' => $this->finger_5,
             'created_at' => $this->created_at->format('d-m-Y H:m:s'),
             'updated_at' => $this->updated_at->format('d-m-Y H:m:s'),
